--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -2,7 +2,7 @@
 	%h2= link_to post.title, post
 	#eventually the user
 	%p
-	Publised at
+	Published at
 	= time_ago_in_words(post.created_at)
 
 = link_to "New Post", new_post_path
